<resources>
  <string name="app_name">GH::watch</string>
  <string name="context_menu">Context menu</string>
  <string name="action_settings">Preferences</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_supportAppDevelopment">Support Development</string>
  <string name="action_about">About</string>
  <string name="action_notifCheck">Notification check (debug)</string>
  <string name="action_donationTogle">Donation togle (debug)</string>
  <string name="action_all_read">Mark all as read</string>
  <string name="action_filter_by_repo">Filter by repository</string>
  <string name="action_reset_filter">Reset filter</string>
  <string name="action_mark_read">Mark as read</string>
  <string name="action_view">View</string>
  <string name="action_view_on_github">View on Github</string>
  <string name="action_mute_thread">Unsubscribe</string>
  <string name="action_unwatch">Unwatch</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_close">Close</string>
  <string name="button_ok">OK</string>
  <string name="dialog_error">Error</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="widget_title_unread">Github notifications unread count</string>
  <string name="empty"></string>
  <string name="repo_thumb_img_descrition">Repository thumbnail image</string>
  <string name="user_thumb_img_descrition">User profile photo</string>
  <string name="message_err_action_no_thread_available">Action failed due to too much background activity running now. Try later please.</string>
  <string name="drawer_repo_filter_title">Filter by repository</string>
  <string name="menu_drawer_unread">Unread notifications</string>
  <string name="menu_drawer_watched">Watched repositories</string>
  <string name="menu_drawer_settings">Settings</string>
  <string name="menu_drawer_support">Support us</string>
  <string name="menu_drawer_about">About</string>
  <string name="time_interval_abbreviation_minute">m</string>
  <string name="time_interval_abbreviation_hour">h</string>
  <string name="time_interval_abbreviation_day">d</string>
  <string name="an_title_one">New GitHub notification available</string>
  <string name="an_title_more">New GitHub notifications available</string>
  <string name="an_channel_name">GitHub notifications</string>
  <string name="an_channel_description">GitHub notifications from all repos. Use fine-grained per repo filtering in the app.</string>
  <string name="start_activity_text">Stay in touch with what is happening around GitHub project of your interest.</string>
  <string name="start_activity_text2">Follow GitHub notifications directly from your smart phone or tablet.</string>
  <string name="start_activity_text4">GH::watch checks GitHub server for new notifications every hour by default. You can change polling period in application Settings.</string>
  <string name="start_activity_text3">Tip: You can lighten your email box thanks to this application. Simply go to the GitHub.com > \'Settings\' > \'Notifications\' and disable Emails for notifications there because you are notified directly by this app.</string>
  <string name="button_login_github">Login GitHub</string>
  <string name="auth_label">GH::watch GitHub</string>
  <string name="auth_activity_label">GH::watch is logging in to GitHub, finish authentication flow in the browser, refresh/reload browser tab pointing \'github.com/login/oauth\' if process got stuck ...</string>
  <string name="auth_err_one_account_allowed">GH::watch supports only one GitHub account.</string>
  <string name="auth_err_comm">GitHub login failed</string>
  <string name="dialog_login">Login GitHub</string>
  <string name="dialog_login_info">Note: Password is not stored on your device (OAuth is used). Two factor authentication is supported!</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="otp">Authentication code</string>
  <string name="otp_info">Two factor authentication is in use. Enter Authentication code please.</string>
  <string name="password_show">Show password</string>
  <string name="button_login">Log In</string>
  <string name="error_username_mandatory">\"Username\" must be filled</string>
  <string name="error_password_mandatory">\"Password\" must be filled</string>
  <string name="progress_login_title">GitHub login in progress</string>
  <string name="message_err_error_auth">GitHub login failed. Provided \"Username\" or \"Password\" is invalid or number of failed login attempts exceeded.</string>
  <string name="message_err_comm_error_conn_unavailable">Communication with GitHub server failed. Network is not available. Enable/check internet connection please.</string>
  <string name="message_err_comm_error_auth">Communication with GitHub server failed due to authentication problem. Check your account settings please.</string>
  <string name="message_err_comm_error_conn_error">Communication with GitHub server failed due to network error. Try later please.</string>
  <string name="message_err_comm_error_data_error">Communication with GitHub server failed due to invalid data format. Try later please.</string>
  <string name="message_err_comm_error_unknown">Communication with GitHub server failed due to unknown error. Try later please.</string>
  <string name="notifications_list_title">Unread Notifications</string>
  <string name="message_no_unread_notifications">No unread notifications available. Pull down to refresh.</string>
  <string name="message_staled_data">Displayed data may be outdated!</string>
  <string name="message_confirm_notifications_all_mark_read_title">Mark all notifications as read on GitHub?</string>
  <string name="message_confirm_notifications_all_mark_read">Do you really want to mark all notifications as read? This can\'t be undone!\n\nYou can mark particular notification as read by swiping it out to the right or using its context menu.</string>
  <string name="message_confirm_notifications_all_mark_read_repo">Do you really want to mark all notifications from the selected repository as read? This can\'t be undone!\n\nYou can mark particular notification as read by swiping it out to the right.</string>
  <string name="message_notification_marked_read">Notification marked as read.</string>
  <string name="message_notification_thread_muted">Notification thread unsubscribed.</string>
  <string name="message_notifications_all_marked_read">All notifications marked as read.</string>
  <string name="progress_get_view_url_title">Loading notification</string>
  <string name="watched_repos_list_title">Watched Repositories</string>
  <string name="message_no_watched_repos">No watched repositories available. Pull down to refresh.</string>
  <string name="message_confirm_unwatch_repository_title">Unwatch repository on GitHub?</string>
  <string name="message_confirm_unwatch_repository">Do you really want to Unwatch the selected repository on GitHub? This can\'t be undone from this application!</string>
  <string name="pref_appNightMode">Application theme</string>
  <string-array name="pref_appNightMode_entries">
    <item>Follow System</item>
    <item>Automatic Switching</item>
    <item>Light</item>
    <item>Dark</item>
  </string-array>
  <string-array name="pref_appNightMode_values">
    <item>-1</item>
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string name="pref_appNightMode_default">-1</string>
  <string name="activity_settings_title">Settings</string>
  <string name="pref_generalSettings_title">General settings</string>
  <string name="pref_markReadOnShow">Mark notification as read on show</string>
  <string name="pref_markReadOnShow_default">ask</string>
  <string-array name="pref_markReadOnShow_entries">
    <item>Ask me</item>
    <item>Yes</item>
    <item>No</item>
  </string-array>
  <string-array name="pref_markReadOnShow_values">
    <item>ask</item>
    <item>yes</item>
    <item>no</item>
  </string-array>
  <string name="pref_repoVisibility">Default Repository visibility</string>
  <string name="pref_repoVisibility_context">Repository visibility</string>
  <string name="pref_repoVisibility_default">1</string>
  <string-array name="pref_repoVisibility_entries">
    <item>Visible</item>
    <item>Invisible</item>
  </string-array>
  <string-array name="pref_repoVisibility_values">
    <item>1</item>
    <item>2</item>
  </string-array>
  <string-array name="pref_repoVisibilityFull_entries">
    <item>Default</item>
    <item>Visible</item>
    <item>Invisible</item>
  </string-array>
  <string-array name="pref_repoVisibilityFull_values">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string name="pref_notificationSettings_title">Android notifications</string>
  <string name="pref_notify">Notifications enabled</string>
  <string name="pref_notify_summ">Fire Android notification when a new GitHub notification is available</string>
  <string name="pref_notifyFilter">Notifications filter</string>
  <string name="pref_notifyFilter_default">1</string>
  <string-array name="pref_notifyFilter_entries">
    <item>Everything</item>
    <item>Participating only</item>
    <item>Nothing</item>
  </string-array>
  <string-array name="pref_notifyFilter_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>
  <string-array name="pref_notifyFilterFull_entries">
    <item>Default</item>
    <item>Everything</item>
    <item>Participating only</item>
    <item>Nothing</item>
  </string-array>
  <string-array name="pref_notifyFilterFull_values">
    <item>0</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>
  <string name="text_because">because</string>
  <string name="pref_notifySound">Notification sound</string>
  <string name="notificationSoundDisabled">None</string>
  <string name="pref_notifyVibrate">Vibrate</string>
  <string name="pref_notifyVibrate_summ">Vibrate when new GitHub notification is available</string>
  <string name="pref_serverSettings_title">GitHub server call settings</string>
  <string name="pref_serverCheckPeriod">New notifications check period</string>
  <string name="pref_serverCheckPeriod_default">60</string>
  <string name="pref_serverCheckWifiOnly">Check over Wifi only</string>
  <string name="pref_serverCheckWifiOnly_summ">Allow background check of new notifications over WiFi only to save your mobile data.</string>
  <string name="pref_serverCheckFull">Better read detection</string>
  <string name="pref_serverCheckFull_summ">Better detection of notifications read on another device, a bit higher resource consumption.</string>
  <string name="dialog_sad_intro_text">Do you like this app? Support its development please. You get a small gift for your donation in form of few extra features. For now it is showing of Status and Labels related to the notified Issue or Pull Request.</string>
  <string name="dialog_sad_title_social">Spread the word</string>
  <string name="dialog_sad_button_rate">Rate in Google Play</string>
  <string name="dialog_sad_button_share">Share App with friends</string>
  <string name="dialog_sad_text_donated">You donated already, thank you very much. You can buy us a coffee to keep us running.</string>
  <string name="dialog_sad_button_donate_1">Basic donation\n(~1 USD/EUR)</string>
  <string name="dialog_sad_button_donate_2">I\'m feeling rich ;-)\n(~4 USD/EUR)</string>
  <string name="dialog_sad_button_donate_3">Buy us a coffee\n(~3 USD/EUR)</string>
  <string name="dialog_sad_button_donate_restore">Restore previous donation</string>
  <string name="dialog_sad_title_participate">Participate in Development</string>
  <string name="dialog_sad_button_bug">Bug Report or Feature Request</string>
  <string name="dialog_sad_button_src">Contribute to the source code</string>
</resources>