<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_unread"

      android:icon="@drawable/ic_clear_all_white_36dp"
      android:title="@string/menu_drawer_unread"/>
    <item
      android:id="@+id/nav_watched"
      android:icon="@drawable/ic_clear_all_white_36dp"
      android:title="@string/menu_drawer_watched"/>
 </group>
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_clear_all_white_36dp"
      android:title="@string/menu_drawer_settings"/>
    <item
      android:id="@+id/nav_support"
      android:icon="@drawable/ic_clear_all_white_36dp"
      android:title="@string/menu_drawer_support"/>
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_clear_all_white_36dp"
      android:title="@string/menu_drawer_about"/>


</menu>