<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2014 contributors as indicated by the @authors tag.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="24dp"
              android:paddingRight="24dp"
              android:paddingTop="24dp"
              android:orientation="vertical">

  <TextView
    android:id="@+id/title"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/dialog_login"/>

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_login_info"/>

      <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"/>

      <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

      <CheckBox
        android:id="@+id/password_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_show"/>

      <TextView
        android:id="@+id/otp_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/otp_info"
        android:visibility="gone"/>

      <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:inputType="textVisiblePassword"
        android:visibility="gone"/>

    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"/>

    <Button
      android:id="@+id/button_cancel"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_cancel"/>


    <Button
      android:id="@+id/button_login"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_login"/>
  </LinearLayout>

</LinearLayout>